--- a/Random_Roll/Random_Roll.csproj
+++ b/Random_Roll/Random_Roll.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="iNKORE.UI.WPF" Version="1.2.7.1" />
     <PackageReference Include="iNKORE.UI.WPF.Modern" Version="0.9.30" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.8" />
   </ItemGroup>
 
 </Project>
