--- a/Random_Roll/Random_Roll.csproj
+++ b/Random_Roll/Random_Roll.csproj
@@ -7,7 +7,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+	<ApplicationIcon>Assets\AppLogo.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+	<Resource Include="Assets\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="iNKORE.UI.WPF" Version="1.2.7.1" />
